--- a/engine/grammar.yaml
+++ b/engine/grammar.yaml
@@ -4,11 +4,26 @@ START:
   mandatory:
     _content: CONTENT
   optional:
-    _listeners: LISTENERS
     _include: INCLUDE_DICT
+    _injections: BLOCK_INJECTIONS_LIST
+    _listeners: LISTENERS
     _meta: META_DICT
     _vars: VARS
   other: BLOCK
+INCLUDE_DICT:
+  type: dict
+  other: _text # Actually is a filename, but we don't have to pay attention to that for now
+BLOCK_INJECTIONS_LIST:
+  type: list
+  elements: BLOCK_INJECTION
+BLOCK_INJECTION:
+  type: union_with_keys
+  contexts:
+    before: BLOCK_INJECTION_BEFORE
+BLOCK_INJECTION_BEFORE:
+  type: dict
+  mandatory:
+    before: _addr
 LISTENERS:
   type: list
   elements: LISTENER
@@ -21,12 +36,10 @@ ON_RECEIVE_LISTENER:
   mandatory:
     on_receive: _id
     handler: CONTENT
-INCLUDE_DICT:
-  type: dict
-  other: _text # Actually is a filename, but we don't have to pay attention to that for now
 META_DICT:
   type: dict
   optional:
+    dont_save_print: _null
     no_addr_eval: _null
     no_parse_eval: _null
 VARS:
@@ -49,6 +62,7 @@ DICT_BLOCK: # Has special built-in checking
     _content: CONTENT
     _listeners: LISTENERS
     _include: INCLUDE_DICT
+    _meta: META_DICT
     _vars: VARS
   other: BLOCK
 LIST_BLOCK:
@@ -87,6 +101,7 @@ DICT_INSTR:
     random: RANDOM
     return: RETURN
     run: RUN
+    seed: SEED
     send: SEND
     separator: SEPARATOR
     set: SET
@@ -215,8 +230,16 @@ INJECT:
   mandatory:
     inject: _addr
   optional:
-    into_choices: _text
+    into_choices: INJECT_INTO_CHOICES_SPEC
     position: _inject_position
+INJECT_INTO_CHOICES_SPEC:
+  type: union_with_types
+  str: _text
+  dict: INJECT_INTO_CHOICES_DICT
+INJECT_INTO_CHOICES_DICT:
+  type: dict
+  optional:
+    except: _text
 INSERT:
   type: dict
   mandatory:
@@ -283,6 +306,10 @@ RUN:
   type: dict
   mandatory:
     run: _var_id
+SEED:
+  type: dict
+  mandatory:
+    seed: _id
 SEND:
   type: dict
   mandatory:
