--- a/engine/grammar.yaml
+++ b/engine/grammar.yaml
@@ -8,6 +8,7 @@ START:
     _injections: BLOCK_INJECTIONS_LIST
     _listeners: LISTENERS
     _meta: META_DICT
+    _shown: SHOWN_LIST
     _vars: VARS
   other: BLOCK
 INCLUDE_DICT:
@@ -42,6 +43,16 @@ META_DICT:
     dont_save_print: _null
     no_addr_eval: _null
     no_parse_eval: _null
+SHOWN_LIST:
+  type: list
+  elements: SHOWN_VAR
+SHOWN_VAR:
+  type: union_with_types
+  str: _var_id
+  dict: SHOWN_GROUP
+SHOWN_GROUP:
+  type: dict
+  other: SHOWN_LIST
 VARS:
   type: list
   elements: VAR
@@ -98,6 +109,7 @@ DICT_INSTR:
     pop_queue: POP_QUEUE
     print: PRINT
     print_table: PRINT_TABLE
+    print_var: PRINT_VAR
     random: RANDOM
     return: RETURN
     run: RUN
@@ -283,6 +295,10 @@ PRINT_TABLE:
   type: dict
   mandatory:
     print_table: _table_id
+PRINT_VAR:
+  type: dict
+  mandatory:
+    print_var: _text
 RANDOM:
   type: dict
   mandatory:
