--- a/stories/tunnel/02-lemeny/intro.yaml
+++ b/stories/tunnel/02-lemeny/intro.yaml
@@ -1,6 +1,6 @@
 ---
 _content:
-  - command: input ready, excited, vibe
+  #- command: input ready, excited, vibe
   - goto: /tunnel/training
 _include:
   logic: logic.yaml
